# hello-jma-xml-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
src/: main.py
src/configs/: log_config.py
tests/: test_main.py
